# jcontrol

./: .gitignore  CMakeLists.txt  README  README.md  package.xml
config/: jebediah_control.yaml
jcontrol_msgs/: CMakeLists.txt  package.xml
jcontrol_msgs/msg/: Action.msg  SetPoint.msg  State.msg
jebediah_control/: CMakeLists.txt  README  package.xml
jebediah_control/config/: jebediah_control.yaml
jebediah_control/launch/: rpi.launch  server.launch  server_headless.launch
jebediah_control/nodes/: client  diagnostics  fourierseries  gzclient  install_dep  server
jebediah_control/scripts/: Dataset.txt  analysis  analysis.py  client  controller  diagnostics.py  fourierseries.py  gait.py  jcontroller.py  neuralnetwork.py  server  velocity_analisys.py
jebediah_control/scripts/matlab/: GenerateAngularGait.m  GenerateGait.m  draw.m  draw.m~  drawRef.m  main.m  plotCircle3D.m  reference.m
jebediah_control/scripts/model/: model_topology.json  model_weights.h5  population.csv
jebediah_control/scripts/model/Datasets/: Dataset_processed.csv  Dataset_ref.txt
jebediah_control/scripts/model/Evolutionary_logs/: LifeCycle.csv  population.csv
jebediah_control/scripts/model/reference/: forward.csv  rotate.csv
jebediah_control/scripts/neuralnet/: supervised_net.py
jebediah_control/scripts/neuralnet/Model/: model_weights.h5
jebediah_control/src/: ctrl_api.cpp
jebediah_control/src/neopixelRing/: neopixelRing.ino
launch/: jebediah_control.launch  server_headless.launch
scripts/: client  controller.py  gait.py
src/: ctrl_api.cpp
(+19 files in other folders)
